Added warehouse logic

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -3,7 +3,7 @@
   --secondary-color: #f6fbff;
   --light-gray: #cfdaee;
   --accent-color: #e75050;
-  --accent-color-light: #eb5757;
+  --accent-color-light: #e96161;
 }
 
 * {
