--- a/web/css/menu.css
+++ b/web/css/menu.css
@@ -18,7 +18,7 @@
 
 .menu.open {
   height: 100vh;
-  width: 300px;
+  width: 400px;
   border-radius: 0;
   padding: 20px;
   border-color: var(--primary-color);
@@ -119,13 +119,22 @@
 .menu-content__body-input-list > li:before {
   content: '-';
   margin-right: 8px;
+  font-size: 1.15rem;
+}
+
+.menu-content__body-input {
+  font-size: 1.15rem;
 }
 
 .submit-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: var(--accent-color);
   color: var(--secondary-color);
   font-weight: 700;
-  font-size: 1rem;
+  font-size: 1.5rem;
+  line-height: 1.5rem;
   border: none;
   border-radius: 16px;
   padding: 12px 20px;
@@ -133,7 +142,34 @@
   transform: scale(1);
 }
 
+.spinner {
+  margin-left: 0.5rem;
+  width: 1.25rem;
+  height: 100%;
+  display: none;
+  animation: spin 1s linear infinite;
+}
+
 .submit-button:hover {
   background-color: var(--accent-color-light);
-  transform: scale(1.05);
+  transform: scale(1.025);
+}
+
+.submit-button:disabled {
+  transform: scale(1);
+  background-color: var(--accent-color-light);
+}
+
+.submit-button:disabled > .spinner {
+  display: inline-block;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(359deg);
+  }
 }
