Integrated backend and frontend to use flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <title>Grouter!</title>
-    <link rel="icon" href="resources/logo_small.webp" />
+    <link rel="icon" href="static/resources/logo_small.webp" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.15.1/css/ol.css" type="text/css">
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.15.1/build/ol.js"></script>
-    <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/menu.css" />
+    <link rel="stylesheet" href="static/css/index.css" />
+    <link rel="stylesheet" href="static/css/menu.css" />
     <meta charset="UTF-8" />
   </head>
   <body>
@@ -84,13 +84,13 @@
           <div class="menu-content__body-item">
             <button id="routeSubmit" type="submit" onclick="sendInfo()" class="submit-button transition">
               <span>Izveidot maršrutus</span>
-              <img src="resources/wheel-svgrepo-com.svg" class="spinner">
+              <img src="static/resources/wheel-svgrepo-com.svg" class="spinner">
             </button>
           </div>
         </div>
       </div>
     </div>
-    <script src="javascript/map.js"></script>
-    <script src="javascript/menu.js"></script>
+    <script src="static/javascript/map.js"></script>
+    <script src="static/javascript/menu.js"></script>
   </body>
 </html>
