Fixed flask api bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
             </ul>
           </div>
           <div class="menu-content__body-item">
-            <button id="routeSubmit" type="submit" onclick="sendInfo()" class="submit-button transition">
+            <button id="routeSubmit" type="submit" onclick="sendInfo('{{serverIp}}')" class="submit-button transition">
               <span>Izveidot maršrutus</span>
               <img src="static/resources/wheel-svgrepo-com.svg" class="spinner">
             </button>
