--- a/static/css/index.css
+++ b/static/css/index.css
@@ -15,6 +15,7 @@
 :root {
   --primary-color: #1f2421;
   --secondary-color: #f6fbff;
+  --gray: #bac4d5;
   --light-gray: #cfdaee;
   --accent-color: #e75050;
   --accent-color-light: #e96161;
@@ -29,12 +30,18 @@
   text-decoration: none;
 }
 
-body {
-  font-family: 'Tahoma', sans-serif;
+html {
+  font-family: 'Tahoma', sans-serif !important;
   font-size: 16px;
   line-height: 1.5;
   color: var(--primary-color);
   background-color: var(--secondary-color);
+}
+
+input {
+  background-color: var(--secondary-color);
+  font-size: inherit;
+  line-height: inherit;
 }
 
 ::-webkit-scrollbar {
@@ -88,8 +95,4 @@ body {
   top: 8px !important;
   right: 8px !important;
   left: auto !important;
-}
-
-input {
-  background-color: var(--secondary-color);
 }
