--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -65,6 +65,7 @@
   display: flex;
   flex-direction: column;
   opacity: 0;
+  overflow: auto;
 }
 
 .menu.open .menu-content {
@@ -73,11 +74,6 @@
 
 .menu-header {
   padding: 0 8px;
-}
-
-.menu-content__body {
-  overflow-y: auto;
-  overflow-x: hidden;
 }
 
 .error-text {
