--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -64,10 +64,16 @@
   max-height: calc(100vh - 160px);
   display: flex;
   flex-direction: column;
-  opacity: 0;
   overflow: auto;
 }
 
+.menu-header,
+.menu-content {
+  opacity: 0;
+}
+
+
+.menu.open .menu-header,
 .menu.open .menu-content {
   opacity: 1;
 }
