--- a/templates/register_view.html
+++ b/templates/register_view.html
@@ -2,7 +2,7 @@
 <html lang="lv">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1"/>
     <title>Grouter!</title>
     <link rel="icon" href="static/resources/logo_small.webp" />
     <link rel="stylesheet" href="static/css/index.css" />
