--- a/templates/user_view.html
+++ b/templates/user_view.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1"/>
   <title>Grouter!</title>
   <link rel="icon" href="static/resources/logo_small.webp"/>
   <link rel="preconnect" href="static/javascript/map.js"/>
